# unsloth-GRPO-qwen2.5

./: .gitignore  README.md  create_gguf.sh  just_make_it_work.py  linux_setup.sh  pyproject.toml  qwen2_5_(3b)_grpo.py  qwen2_5_ada6000_grpo.py  qwen_notebook_clone.py  requirements.txt  run_qwen_grpo.sh  setup.py  setup_env.bat  setup_env.sh
qwen25_grpo/: __init__.py  main.py
